prevent size table on product pages from overflowing

--- a/source/stylesheets/_components.scss
+++ b/source/stylesheets/_components.scss
@@ -1779,6 +1779,11 @@ a.filter__scroll-icon:focus {
   }
 }
 
+.size-table {
+  overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
 ul.spec-list {}
 
 li.spec-list__item {
